--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="path-to-logo-image.png" alt="Logo" class="logo">
+        <img src="img/logo.webp" alt="Logo" class="logo">
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
@@ -20,7 +20,7 @@
     <main>
         <section id="about">
             <h1>About Me</h1>
-            <img src="path-to-your-photo.jpg" alt="Dan Larson" class="profile-pic">
+            <img src="img/me.jpg" alt="Dan Larson" class="profile-pic">
             <p>Short bio goes here...</p>
         </section>
         <section id="portfolio">
