added javascript and updates to the css

--- a/index.html
+++ b/index.html
@@ -10,22 +10,17 @@
     <main class="container">
         <div class="left-column">
             <img src="img/me.jpg" alt="Dan Larson" class="profile-pic">
-            <p>I build analytics, data science, and AI tools for Labratories</p>
+            <p>I build analytic tools, analyze basketball data, and think about AI. </p>
             <div class="social-links">
-                <a href="https://twitter.com/yourprofile" target="_blank">Twitter</a>
-                <a href="https://github.com/yourprofile" target="_blank">GitHub</a>
-                <!-- Add other social media links here -->
+                <a href="https://public.tableau.com/app/profile/datadanlarson/vizzes" target="_blank">Tableau Public</a>
+                <a href="https://github.com/dwlarson10" target="_blank">GitHub</a>
+                <a href="https://datadanlarson.shinyapps.io/artist_metric/" target="_blank">Shiny Apps</a>
             </div>
         </div>
-        <div class="right-column">
-            <div class="card">
-                <a href="https://medium.com/@danlarson_74954/5-ways-to-enhance-your-ggplot-visualizations-7ecb044fa9d9" target="_blank">Enhancing you GGPLOTs</a>
-            </div>
-            <div class="card">
-                <a href="https://medium.com/@danlarson_74954/analyzing-nba-statistics-with-duckdb-11691bbf4864" target="_blank">Working with Duck DB</a>
-            </div>
-            <!-- Add more cards as needed -->
+        <div class="right-column" id="medium-posts">
+            <!-- Medium posts will be dynamically added here -->
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
